--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="Lewis Oaten" />
-   <!--<link href="" rel="alternate" title="Lewis Oaten" type="application/atom+xml" />-->
+   <link href="http://feeds.feedburner.com/LewisOaten" rel="alternate" title="Lewis Oaten" type="application/atom+xml" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -42,7 +42,7 @@
       </p>
     </div>
     <div class="rss">
-      <a href="/">
+      <a href="http://feeds.feedburner.com/LewisOaten">
         <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
       </a>
     </div>
