Setup Google webmaster verification meta tag.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+   <meta name="google-site-verification" content="cSj7MSQ6_zuQWlVU81ZurYsi268ryy1xHWPuUXa8YR0" />
    <title>{{ page.title }}</title>
    <meta name="author" content="Lewis Oaten" />
    <link href="http://feeds.feedburner.com/LewisOaten" rel="alternate" title="Lewis Oaten" type="application/atom+xml" />
