Fixed non-strict XHTML tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
   </div>
 </div>
 
-<a href="http://github.com/caecus"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
+<div style="position: absolute; top: 0; right: 0; border: 0;"><a href="http://github.com/caecus"><img src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a></div>
 
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
