--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,21 +3,41 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <meta name="google-site-verification" content="cSj7MSQ6_zuQWlVU81ZurYsi268ryy1xHWPuUXa8YR0" />
-   <title>{{ page.title }}</title>
-   <meta name="author" content="Lewis Oaten" />
-   <link href="http://feeds.feedburner.com/LewisOaten" rel="alternate" title="Lewis Oaten" type="application/atom+xml" />
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta name="google-site-verification" content="cSj7MSQ6_zuQWlVU81ZurYsi268ryy1xHWPuUXa8YR0" />
+  <meta name="author" content="Lewis Oaten" />
 
-   <!-- syntax highlighting CSS -->
-   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
+  {% if page.description %}
+  <meta name="description" content="{{page.description}}" />
+  {% else %}
+  <meta name="description" content="{{site.description}}" />
+  {% endif %}
 
-   <!-- Homepage CSS -->
-   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+  {% if page.categories %}
+  <meta name="keywords" content="{{page.categories | join: ','}}" />
+  {% else %}
+  <meta name="keywords" content="{{site.keywords | join: ','}}" />
+  {% endif %}
 
-   <!-- Typekit -->
-   <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
-   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  {% if page.date %}
+  <meta http-equiv="date" content="{{page.date | date: '%A, %d  %Y %H:%M:%S GMT'}}" />
+  {% endif %}
+
+  <meta name="robots" content="{{page.index}}INDEX, {{page.follow}}FOLLOW, {{page.archive}}ARCHIVE, {{page.snippet}}SNIPPET" />
+
+  <title>{{site.main_title}} - {{page.title}}</title>
+
+  <link href="http://feeds.feedburner.com/LewisOaten" rel="alternate" title="Lewis Oaten" type="application/atom+xml" />
+
+  <!-- syntax highlighting CSS -->
+  <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
+
+  <!-- Homepage CSS -->
+  <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+
+  <!-- Typekit -->
+  <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
 
