Added more meta-data to the layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,24 +5,11 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta name="google-site-verification" content="cSj7MSQ6_zuQWlVU81ZurYsi268ryy1xHWPuUXa8YR0" />
+
   <meta name="author" content="Lewis Oaten" />
-
-  {% if page.description %}
-  <meta name="description" content="{{page.description}}" />
-  {% else %}
   <meta name="description" content="{{site.description}}" />
-  {% endif %}
-
-  {% if page.categories %}
-  <meta name="keywords" content="{{page.categories | join: ','}}" />
-  {% else %}
   <meta name="keywords" content="{{site.keywords | join: ','}}" />
-  {% endif %}
-
-  {% if page.date %}
-  <meta http-equiv="date" content="{{page.date | date: '%A, %d  %Y %H:%M:%S GMT'}}" />
-  {% endif %}
-
+  {% if page.date %}<meta http-equiv="date" content="{{page.date | date: '%A, %d  %Y %H:%M:%S GMT'}}" />{% endif %}
   <meta name="robots" content="{{page.index}}INDEX, {{page.follow}}FOLLOW, {{page.archive}}ARCHIVE, {{page.snippet}}SNIPPET" />
 
   <title>{{site.main_title}} - {{page.title}}</title>
