--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,21 +14,12 @@ layout: default
   </ul>
 </div>
 
-<div id="tweet">
- <p>Please wait while the comments load...</p>
+<div id="twitter_div">
+      <h2 class="twitter-title">Heading title</h2>
+      <ul id="twitter_update_list">
+            <li></li>
+      </ul>
 </div>
 
-<script 
- src="http://twitterjs.googlecode.com/svn/trunk/src/twitter.min.js" 
- type="text/javascript">
-</script>
-<script type="text/javascript" charset="utf-8">
-getTwitters('tweet', { 
-  id: 'rem', 
-  count: 1, 
-  enableLinks: true, 
-  ignoreReplies: true, 
-  clearContents: true,
-  template: '"%text%" <a href="http://twitter.com/%user_screen_name%/statuses/%id%/">%time%</a>'
-});
-</script>
+<script type="text/javascript" src="http://twitter.com/javascripts/blogger.js"></script>
+<script type="text/javascript" src="http://twitter.com/statuses/user_timeline/josefnankivell.json?callback=twitterCallback2&amp;amp;count=5"></script>
