--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,4 +22,4 @@ layout: default
 </div>
 
 <script type="text/javascript" src="http://twitter.com/javascripts/blogger.js"></script>
-<script type="text/javascript" src="http://twitter.com/statuses/user_timeline/josefnankivell.json?callback=twitterCallback2&amp;amp;count=5"></script>
+<script type="text/javascript" src="http://search.twitter.com/search.json?q=%23scrum&callback=twitterCallback2&count=5"></script>
