Fixed issue with & not being url encoded

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,11 +15,11 @@ layout: default
 </div>
 
 <div id="twitter_div">
-      <h2 class="twitter-title">Heading title</h2>
+      <h2 class="twitter-title">Comments</h2>
       <ul id="twitter_update_list">
             <li></li>
       </ul>
 </div>
 
 <script type="text/javascript" src="http://twitter.com/javascripts/blogger.js"></script>
-<script type="text/javascript" src="http://search.twitter.com/search.json?q=%23scrum&callback=twitterCallback2&count=5"></script>
+<script type="text/javascript" src="http://search.twitter.com/search.json?q=%23scrum&amp;callback=twitterCallback2&amp;count=5"></script>
