--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,15 +16,22 @@
 
   <link href="http://feeds.feedburner.com/LewisOaten" rel="alternate" title="Lewis Oaten" type="application/atom+xml" />
 
-  <!-- syntax highlighting CSS -->
+  <!-- Syntax highlighting CSS -->
   <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
 
   <!-- Homepage CSS -->
   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
 
+  <!-- Comments CSS -->
+  <link rel="stylesheet" href="jquery.tweet.css" type="text/css" media="all" />
+
   <!-- Typekit -->
   <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
+  <!-- JQuery -->
+  <script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js" type="text/javascript"></script>
+  <script language="javascript" src="/scripts/jquery.tweet.js" type="text/javascript"></script>
 </head>
 <body>
 
