--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,12 +14,20 @@ layout: default
   </ul>
 </div>
 
-<div id="twitter_div">
-      <h2 class="twitter-title">Comments</h2>
-      <ul id="twitter_update_list">
-            <li></li>
-      </ul>
-</div>
-
-<script type="text/javascript" src="http://twitter.com/javascripts/blogger.js"></script>
-<script type="text/javascript" src="http://search.twitter.com/search.json?q=%23scrum&amp;callback=twitterCallback2&amp;count=5"></script>
+<div class="tweet"></div>
+<script type='text/javascript'>
+    $(document).ready(function(){
+        $(".tweet").tweet({
+            username: "seaofclouds",
+            join_text: "auto",
+            avatar_size: 32,
+            count: 3,
+            auto_join_text_default: "we said,", 
+            auto_join_text_ed: "we",
+            auto_join_text_ing: "we were",
+            auto_join_text_reply: "we replied to",
+            auto_join_text_url: "we were checking out",
+            loading_text: "loading tweets..."
+        });
+    });
+</script>
