Adjusted query to use test bit.ly post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,16 +18,10 @@ layout: default
 <script type='text/javascript'>
     $(document).ready(function(){
         $(".tweet").tweet({
-            username: "seaofclouds",
-            join_text: "auto",
-            avatar_size: 32,
-            count: 3,
-            auto_join_text_default: "we said,", 
-            auto_join_text_ed: "we",
-            auto_join_text_ing: "we were",
-            auto_join_text_reply: "we replied to",
-            auto_join_text_url: "we were checking out",
-            loading_text: "loading tweets..."
+          avatar_size: 32,
+          count: 4,
+          query: "http://bit.ly/4Kl7z1",
+          loading_text: "Loading comments..."
         });
     });
 </script>
