Fixed use of variable 'post' out of scope. Now using page.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
       login:      'caecus',
       apiKey:     'R_805cccec98054fee49e9f974d28623bf',
       history:    '0',
-      longUrl:    '{{ post.url }}'
+      longUrl:    '{{ page.url }}'
     };
 
   // Build the URL to query
