--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,7 +42,7 @@ layout: default
         $(".tweet").tweet({
           avatar_size: 32,
           count: 4,
-          query: data.results[url].shortUrl,
+          query: data.results[shortUrl].shortUrl,
           loading_text: "Loading comments..."
         });
     });
