--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
   <label for="tweet">Comment: </label><textarea id="tweet" cols="50" rows="3"></textarea>
   <input type="button" id="tweetBtn" value="Tweet"/> 
 </form> 
-<div id="comments"></div>
+<div class="comments"></div>
 <script type='text/javascript'>
   $(document).ready(function(){
     // set up default options
@@ -51,7 +51,7 @@ layout: default
         }
 
         // Load comments
-        $("#comments").tweet({
+        $(".comments").tweet({
           avatar_size: 32,
           count: 4,
           query: data.results[defaults.longUrl].shortUrl,
