Fixing non-absolute css reference

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
 
   <!-- Comments CSS -->
-  <link rel="stylesheet" href="jquery.tweet.css" type="text/css" media="all" />
+  <link rel="stylesheet" href="/css/jquery.tweet.css" type="text/css" media="all" />
 
   <!-- Typekit -->
   <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
