Removed TypeKit and surpless comment label

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
 
 <h2>Comments</h2>
 <form action="" method="post">
-  <label for="tweet">Comment: </label><textarea id="tweet" cols="50" rows="3"></textarea>
+  <textarea id="tweet" cols="50" rows="3"></textarea>
   <input type="button" id="tweetBtn" value="Tweet"/> 
 </form> 
 <div id="comments"></div>
