--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,9 @@
   <!-- Comments CSS -->
   <link rel="stylesheet" href="/css/jquery.tweet.css" type="text/css" media="all" />
 
-  <!-- Typekit -->
+  <!-- Typekit 
   <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
-  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>-->
 
   <!-- JQuery -->
   <script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js" type="text/javascript"></script>
