Updated tweet url to use search result page.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,9 +44,8 @@ layout: default
     $.getJSON(daurl, function(data){
         // Setup comment box
         $('#tweetBtn').click( function() {
-          var url = "http://twitter.com/home?status=" +
-                    $('textarea#tweet').val() +
-                    " " + data.results[defaults.longUrl].shortUrl;
+          var url = "http://twitter.com/#search?q=" + data.results[defaults.longUrl].shortUrl + "&status=";
+          url += $('textarea#tweet').val() + " " + data.results[defaults.longUrl].shortUrl;
           window.open(url);
         });
 
