--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -54,7 +54,7 @@ layout: default
           avatar_size: 32,
           count: 4,
           query: data.results[defaults.longUrl].shortUrl,
-          loading_text: "Loading comments..."
+          loading_text: '<img src="/images/loading.gif"></img> Loading comments...'
         });
     });
   });
