Tuned comments style

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
 <h2>Comments</h2>
 <form action="" method="post">
   <textarea id="message" cols="50" rows="3"></textarea>
-  <input type="button" id="tweetBtn" value="Tweet"/> 
+  <input type="button" id="tweetBtn" value="Preview Tweet"/> 
 </form> 
 <div class="tweet"></div>
 <script type='text/javascript'>
