--- a/css/jquery.tweet.css
+++ b/css/jquery.tweet.css
@@ -7,14 +7,14 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    background-color: #EEE; }
+    background-color: #F0F0F0; }
     .tweet .tweet_list li {
       overflow: auto;
       padding: .5em; }
       .tweet .tweet_list li a {
         color: #0C717A; }
     .tweet .tweet_list .tweet_even {
-      background-color: #FFF; }
+      background-color: #FAFAFA; }
     .tweet .tweet_list .tweet_avatar {
       padding-right: .5em;
       float: left; }
