--- a/css/jquery.tweet.css
+++ b/css/jquery.tweet.css
@@ -7,7 +7,7 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    background-color: #E0E0E0; }
+    background-color: #FAFAFA; }
     .tweet .tweet_list li {
       overflow: auto;
       padding: .5em; }
