--- a/css/jquery.tweet.css
+++ b/css/jquery.tweet.css
@@ -3,18 +3,17 @@
   font-size: 100%;
   color: #000; }
   .tweet .tweet_list {
-    -webkit-border-radius: .5em;
     list-style-type: none;
     margin: 0;
     padding: 0;
-    background-color: #F8F8F8; }
+    background-color: #999; }
     .tweet .tweet_list li {
       overflow: auto;
       padding: .5em; }
       .tweet .tweet_list li a {
         color: #0C717A; }
     .tweet .tweet_list .tweet_even {
-      background-color: #F4F4F4; }
+      background-color: #FFF; }
     .tweet .tweet_list .tweet_avatar {
       padding-right: .5em;
       float: left; }
