Tuned comments style

--- a/css/jquery.tweet.css
+++ b/css/jquery.tweet.css
@@ -6,7 +6,7 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    background-color: #999; }
+    background-color: #FFF; }
     .tweet .tweet_list li {
       overflow: auto;
       padding: .5em; }
