Modified comment logic

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,9 @@ layout: default
   <textarea id="message" cols="50" rows="3"></textarea>
   <input type="button" id="tweetBtn" value="Preview Tweet"/> 
 </form> 
-<div class="tweet"><img src="/images/loading.gif"></img> Loading comments...</div>
+<div class="tweet">
+  <img src="/images/loading.gif"></img> Calculating comments...
+</div>
 <script type='text/javascript'>
   $(document).ready(function(){
     // set up default options
