Fixing replace of raw element instead of html contents

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,7 +53,7 @@ layout: default
 
         $("#comments").html("");
         // Load comments
-        $(".comments").tweet({
+        $("#comments").tweet({
           avatar_size: 32,
           count: 20,
           query: data.results[defaults.longUrl].shortUrl,
