--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,8 +19,8 @@ layout: default
   <textarea id="message" cols="50" rows="3"></textarea>
   <input type="button" id="tweetBtn" value="Preview Tweet"/> 
 </form> 
-<div id="comments">
-  <img src="/images/loading.gif"></img> Calculating comments...
+<div id="comments" class=".tweet">
+  <img src="/images/loading.gif"></img> Calculating comment tag...
 </div>
 <script type='text/javascript'>
   $(document).ready(function(){
@@ -53,7 +53,7 @@ layout: default
 
         // Load comments
         $("#comments").html("");
-        $("#comments").tweet({
+        $(".tweet").tweet({
           avatar_size: 32,
           count: 20,
           query: data.results[defaults.longUrl].shortUrl,
@@ -61,7 +61,7 @@ layout: default
         });
 
         // Clear out links to this page
-        //$("#comments").html($("#comments").html().replace(data.results[defaults.longUrl].shortUrl, ''));
+        $("#comments").html($("#comments").html().replace(data.results[defaults.longUrl].shortUrl, ''));
     });
   });
 </script>
