Fixing replace of raw element instead of html contents

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,7 +52,7 @@ layout: default
         });
 
         // Load comments
-        $("#comments").html("");
+        //$("#comments").html("");
         $(".tweet").tweet({
           avatar_size: 32,
           count: 20,
@@ -61,7 +61,7 @@ layout: default
         });
 
         // Clear out links to this page
-        $("#comments").html($("#comments").html().replace(data.results[defaults.longUrl].shortUrl, ''));
+        //$("#comments").html($("#comments").html().replace(data.results[defaults.longUrl].shortUrl, ''));
     });
   });
 </script>
