--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,7 +61,7 @@ layout: default
         });
 
         // Clear out links to this page
-        //$("#comments").html($("#comments").html().replace(data.results[defaults.longUrl].shortUrl, ''));
+        $(".tweet").html($(".tweet")[0].html().replace(data.results[defaults.longUrl].shortUrl, ''));
     });
   });
 </script>
