Fixing replace of raw element instead of html contents

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,7 +52,7 @@ layout: default
         });
 
         // Load comments
-        $(".tweet").html("");
+        //$(".tweet").html("");
         $(".tweet").tweet({
           avatar_size: 32,
           count: 20,
