--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
   <textarea id="message" cols="50" rows="3"></textarea>
   <input type="button" id="tweetBtn" value="Preview Tweet"/> 
 </form> 
-<div class=".tweet">
+<div class="tweet" id="comment">
   <img src="/images/loading.gif"></img> Calculating comment tag...
 </div>
 <script type='text/javascript'>
@@ -52,8 +52,8 @@ layout: default
         });
 
         // Load comments
-        //$(".tweet").html("");
-        $(".tweet").tweet({
+        $("#comment").html("");
+        $("#comment").tweet({
           avatar_size: 32,
           count: 20,
           query: data.results[defaults.longUrl].shortUrl,
@@ -61,7 +61,7 @@ layout: default
         });
 
         // Clear out links to this page
-        //$(".tweet")[0].html($(".tweet")[0].html().replace(data.results[defaults.longUrl].shortUrl, ''));
+        $("#comment").html($("#comment").html().replace(data.results[defaults.longUrl].shortUrl, ''));
     });
   });
 </script>
