Fixing replace of raw element instead of html contents

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,7 +61,7 @@ layout: default
         });
 
         // Clear out links to this page
-        $("#comment").html($("#comment").html().replace(data.results[defaults.longUrl].shortUrl, ''));
+        //$("#comment").html($("#comment").html().replace(data.results[defaults.longUrl].shortUrl, ''));
     });
   });
 </script>
