--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,10 +58,10 @@ layout: default
           count: 20,
           query: data.results[defaults.longUrl].shortUrl,
           loading_text: '<img src="/images/loading.gif"></img> Loading comments...'
-        }).replace(data.results[defaults.longUrl].shortUrl, '');
+        });
 
         // Clear out links to this page
-        //$("#comment").html($("#comment").html().replace(data.results[defaults.longUrl].shortUrl, ''));
+        $("#comment").html($("#comment").html().replace(data.results[defaults.longUrl].shortUrl, ''));
     });
   });
 </script>
