--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,7 +61,9 @@ layout: default
         });
 
         // Clear out links to this page
-        $("#comment").html($("#comment").html().replace(data.results[defaults.longUrl].shortUrl, ''));
+        var oldHTML = $("#comment").html();
+        var newHTML = oldHTML.replace(data.results[defaults.longUrl].shortUrl, '');
+        $("#comment").html(newHTML);
     });
   });
 </script>
