Added forked jquery plugin

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,9 +61,9 @@ layout: default
         });
 
         // Clear out links to this page
-        var oldHTML = $("#comment").html();
-        var newHTML = oldHTML.replace(data.results[defaults.longUrl].shortUrl, '');
-        $("#comment").html(newHTML);
+        //var oldHTML = $("#comment").html();
+        //var newHTML = oldHTML.replace(data.results[defaults.longUrl].shortUrl, '');
+        //$("#comment").html(newHTML);
     });
   });
 </script>
