Added debug code to comment text-replace.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,7 +62,7 @@ layout: default
             // Clear out links to this page
             var oldHTML = $("#comment").html();
             var newHTML = oldHTML.replace(data.results[defaults.longUrl].shortUrl, '');
-            $("#comment").html(newHTML);
+            $("textarea#message").val( oldHTML + "\n----------\n" + newHTML);
             }
         });
     });
