--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,9 +60,7 @@ layout: default
           loading_text: '<img src="/images/loading.gif"></img> Loading comments...',
           callback: function(){
             // Clear out links to this page
-            var oldHTML = $("#comment").html();
-            var newHTML = oldHTML.replace(data.results[defaults.longUrl].shortUrl, '');
-            $("textarea#message").val( oldHTML + "\n----------\n" + newHTML);
+            $("#comment").html($("#comment").html().replace("/<a href=\"" + data.results[defaults.longUrl].shortUrl + "\">" + data.results[defaults.longUrl].shortUrl + "</a>/g", ''));
             }
         });
     });
