Modified comment replace code with global regular expression.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,9 +60,8 @@ layout: default
           loading_text: '<img src="/images/loading.gif"></img> Loading comments...',
           callback: function(){
             // Clear out links to this page
-            var searchString = "\\" + data.results[defaults.longUrl].shortUrl + "\\g";
             var oldHTML = $("#comment").html();
-            var newHTML = oldHTML.replace(searchString, '');
+            var newHTML = oldHTML.replace(/data.results[defaults.longUrl].shortUrl/g, '');
             $("textarea#message").val( oldHTML + "\n----------\n" + newHTML);
             }
         });
