--- a/css/screen.css
+++ b/css/screen.css
@@ -9,45 +9,45 @@
 * {
   margin: 0;
   padding: 0;
-}
+  }
 
 html, body {
   height: 100%;
-}
+  }
 
 body {
   background-color: white;
   font: 13.34px helvetica, arial, clean, sans-serif;
   text-align: center;
-}
+  }
 
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%;
-}
+  }
 
 h1 {
   margin-bottom: 1em;
-}
+  }
 
 p {
   margin: 1em 0;
-}
+  }
 
 a {
   color: #00a;
-}
+  }
 
 a:hover {
   color: black;
-}
+  }
 
 a:visited {
   color: #a0a;
-}
+  }
 
 table {
   font-size: inherit;
-}
+  }
 
 /*****************************************************************************/
 /*
@@ -58,17 +58,17 @@ table {
 ul.posts {
   list-style-type: none;
   margin-bottom: 2em;
-}
+  }
 
   ul.posts li {
     line-height: 1.75em;
-  }
+    }
 
   ul.posts span {
     color: #aaa;
     font-family: Monaco, "Courier New", monospace;
     font-size: 80%;
-  }
+    }
 
 /*****************************************************************************/
 /*
@@ -76,42 +76,42 @@ ul.posts {
 /*
 /*****************************************************************************/
 
+.title {
+  color: #a00;
+  font-weight: bold;
+  margin-bottom: 2em;
+  }
+
 .site {
   font-size: 110%;
   text-align: justify;
   width: 40em;
   margin: 3em auto 2em auto;
   line-height: 1.5em;
-}
-
-.title {
-  color: #a00;
-  font-weight: bold;
-  margin-bottom: 2em;
-}
+  }
 
   .site .title a {
     color: #a00;
     text-decoration: none;
-  }
+    }
 
   .site .title a:hover {
     color: black;
-  }
+    }
 
   .site .title a.extra {
     color: #aaa;
     text-decoration: none;
     margin-left: 1em;
-  }
+    }
 
   .site .title a.extra:hover {
     color: black;
-  }
+    }
 
   .site .meta {
     color: #aaa;
-  }
+    }
 
   .site .footer {
     font-size: 80%;
@@ -119,26 +119,26 @@ ul.posts {
     border-top: 4px solid #eee;
     margin-top: 2em;
     overflow: hidden;
-  }
+    }
 
     .site .footer .contact {
       float: left;
       margin-right: 3em;
-    }
+      }
 
       .site .footer .contact a {
         color: #8085C1;
-      }
+        }
 
     .site .footer .rss {
       margin-top: 1.1em;
       margin-right: -.2em;
       float: right;
-    }
+      }
 
       .site .footer .rss img {
         border: 0;
-      }
+        }
 
 /*****************************************************************************/
 /*
@@ -148,7 +148,7 @@ ul.posts {
 
 #post {
 
-}
+  }
 
   /* standard */
 
@@ -156,22 +156,22 @@ ul.posts {
     border: 1px solid #ddd;
     background-color: #eef;
     padding: 0 .4em;
-  }
+    }
+
+    #post pre code {
+      border: none;
+      }
 
   #post ul,
   #post ol {
     margin-left: 1.25em;
-  }
+    }
 
   #post code {
     border: 1px solid #ddd;
     background-color: #eef;
     font-size: 95%;
     padding: 0 .2em;
-  }
-
-    #post pre code {
-      border: none;
     }
 
   /* terminal */
@@ -180,16 +180,29 @@ ul.posts {
     border: 1px solid black;
     background-color: #333;
     color: white;
-  }
+    }
 
   #post pre.terminal code {
     background-color: #333;
-  }
+    }
 
 #related {
   margin-top: 2em;
-}
-
-  #related h2 {
-    margin-bottom: 1em;
   }
+
+#related h2 {
+  margin-bottom: 1em;
+  }
+
+  /* quote */
+  #post blockquote {
+    border-left: 2px solid #AAA;
+    width: 200px;
+    margin-left: 20px;
+    padding: 10px;
+    background-color: #EEE;
+    quotes: "\201C" "\201D";
+    }
+
+  #post blockquote:before { content: open-quote; font-weight: bold; }
+  #post blockquote:after { content: close-quote; font-weight: bold; }
