--- a/css/screen.css
+++ b/css/screen.css
@@ -196,7 +196,7 @@ ul.posts {
 
   /* quote */
   #post blockquote {
-    border-left: 1px solid #FCFCFC;
+    border-left: 1px solid #FAFAFA;
     margin-left: 20px;
     margin-right: 20px;
     padding: 10px;
