--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,7 +61,7 @@ layout: default
           callback: function(){
             // Clear out links to this page
             var searchString = "<a href=\"" + data.results[defaults.longUrl].shortUrl + "\">" + data.results[defaults.longUrl].shortUrl + "</a>";
-            var newHTML = $("#comment").html().replace(new RegExp( searchString, "g" ), '');
+            var newHTML = $("#comment").html().replace(new RegExp( searchString, "gi" ), '');
             $("#comment").html(newHTML);
             }
         });
