--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,92 +1,61 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-  <!-- Google Webmaster -->
-  <meta name="google-site-verification" content="cSj7MSQ6_zuQWlVU81ZurYsi268ryy1xHWPuUXa8YR0" />
+    <!-- Google Webmaster -->
+    <meta name="google-site-verification" content="cSj7MSQ6_zuQWlVU81ZurYsi268ryy1xHWPuUXa8YR0" />
 
-  <meta name="author" content="Lewis Oaten" />
-  <meta name="description" content="{{site.description}}" />
-  <meta name="keywords" content="{{site.keywords | join: ','}}" />
-  {% if page.date %}<meta http-equiv="date" content="{{page.date | date: '%A, %d  %Y %H:%M:%S GMT'}}" />{% endif %}
-  <meta name="robots" content="{{page.index}}INDEX, {{page.follow}}FOLLOW, {{page.archive}}ARCHIVE, {{page.snippet}}SNIPPET" />
+    <meta name="author" content="Lewis Oaten" />
+    <meta name="description" content="{{site.description}}" />
+    <meta name="keywords" content="{{site.keywords | join: ','}}" />
+    {% if page.date %}<meta http-equiv="date" content="{{page.date | date: '%A, %d  %Y %H:%M:%S GMT'}}" />{% endif %}
+    <meta name="robots" content="{{page.index}}INDEX, {{page.follow}}FOLLOW, {{page.archive}}ARCHIVE, {{page.snippet}}SNIPPET" />
 
-  <!-- Google Analytics -->
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-XXXXX-X']);
-    _gaq.push(['_trackPageview']);
+    <!-- Google Analytics -->
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-XXXXX-X']);
+      _gaq.push(['_trackPageview']);
 
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
-    })();
-  </script>
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
+      })();
+    </script>
 
-  <title>{{site.main_title}} - {{page.title}}</title>
+    <title>{{site.main_title}} - {{page.title}}</title>
 
-  <link href="http://feeds.feedburner.com/LewisOaten" rel="alternate" title="Lewis Oaten" type="application/atom+xml" />
+    <link href="http://feeds.feedburner.com/LewisOaten" rel="alternate" title="Lewis Oaten" type="application/atom+xml" />
 
-  <!-- Syntax highlighting CSS -->
-  <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
+    <!-- Syntax highlighting CSS -->
+    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
 
-  <!-- Homepage CSS -->
-  <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
+    <!-- Homepage CSS -->
+    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
 
-  <!-- Comments CSS -->
-  <link rel="stylesheet" href="/css/jquery.tweet.css" type="text/css" media="all" />
+    <!-- Comments CSS -->
+    <link rel="stylesheet" href="/css/jquery.tweet.css" type="text/css" media="all" />
 
-  <!-- JQuery -->
-  <script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js" type="text/javascript"></script>
-  <script language="javascript" src="/scripts/jquery.tweet.js" type="text/javascript"></script>
-</head>
-<body>
+    <!-- JQuery -->
+    <script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js" type="text/javascript"></script>
+    <script language="javascript" src="/scripts/jquery.tweet.js" type="text/javascript"></script>
+  </head>
+  <body>
+    <div class="case">
+      <div class="centrecase">
+        <a href="#" id="rss" ></a>
 
-<div class="site">
-  <div class="title">
-    <a href="/">Lewis Oaten</a>
-    <a class="extra" href="/">home</a>
-  </div>
+        <!--MAIN CONTENT -->
+        {{ content }}
+        <!--INFO SECTION -->
   
-  {{ content }}
-  
-  <div class="footer">
-    <div class="contact">
-      <p>
-        Lewis Oaten<br />
-        lewis@caecus.co.uk
-      </p>
+        <a href="mailtophryz@gmail.com" id="footer">CONTACT ME</a>
+        <a id="logo" href="index.html"></a>
+      </div>
+      <a href="http://createinter.net" id="createint">webdesign by createinter.net</a>
     </div>
-    <div class="contact">
-      <p>
-        <a href="http://github.com/caecus/">github.com/caecus</a><br />
-        <a href="http://google.com/profiles/sphyrz">google.com/profiles/sphyrz</a>
-      </p>
-    </div>
-    <div class="rss">
-      <a href="http://feeds.feedburner.com/LewisOaten">
-        <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
-      </a>
-    </div>
-  </div>
-</div>
-
-<div style="position: absolute; top: 0; right: 0; border: 0;"><a href="http://github.com/caecus"><img src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a></div>
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-12523505-1");
-pageTracker._trackPageview();
-} catch(err) {}
-</script>
-
-</body>
+  </body>
 </html>
