Updated post template

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,17 @@
 ---
 layout: default
 ---
-<div id="post">
-{{ content }}
-</div>
+        <!--BLOG SECTION -->
+        <div id="blogsection">
+          <span class="date"><strong>{{ page.date | date: "%d" }}</strong><em>{{ page.date | date: "%B" }}</em></span>
+          <div class="blogcontent">
+            <h3><a href="{{ post.url }}">{{ page.title }}</a></h3>
+            <strong>{{ page.snippet }}</strong>
+            {{ content }}
+          </div>
+          <!--<span id="blogtab"></span>-->
+        </div>
+        <!--END BLOG SECTION -->
 
 <!-- <div id="related">
   <h2>Related Posts</h2>
