Updated post template

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,10 +6,9 @@ layout: default
           <span class="date"><strong>{{ page.date | date: "%d" }}</strong><em>{{ page.date | date: "%B" }}</em></span>
           <div class="blogcontent">
             <h3><a href="{{ post.url }}">{{ page.title }}</a></h3>
-            <strong>{{ page.snippet }}</strong>
             {{ content }}
           </div>
-          <!--<span id="blogtab"></span>-->
+          <span id="blogtab"></span>
         </div>
         <!--END BLOG SECTION -->
 
